--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Kalam:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Righteous&display=swap");
 @-webkit-keyframes tracking-in-expand {
   0% {
     letter-spacing: -0.5em;
@@ -131,6 +131,92 @@
   }
 }
 
+.btn-cate {
+  border: none;
+  border-radius: 80px;
+  outline: none;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 8px 25px -14px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 8px 25px -14px rgba(0, 0, 0, 0.75);
+  color: white;
+  font-family: inherit;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  width: 130px;
+  height: 60px;
+}
+
+.btn-card {
+  border: none;
+  outline: none;
+  background-color: #5e72e4;
+  height: 40px;
+  width: 120px;
+  font-family: inherit;
+  margin-top: 12px;
+  border-radius: 5px;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+}
+
+.btn-card:hover {
+  background-color: #3d55df;
+}
+
+.lang-heading {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 35px;
+  font-size: 35px;
+  font-weight: 500;
+  letter-spacing: 1.5px;
+}
+
+.res-heading {
+  font-size: 21px;
+  font-weight: 500;
+  letter-spacing: 0.8px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.res-para {
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.card {
+  border-radius: 25px;
+  -webkit-box-shadow: 0px 10px 82px -29px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 10px 82px -29px rgba(0, 0, 0, 0.5);
+  padding: 12px;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: url("../img/bg_card.svg");
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-position-x: right;
+  width: 375px;
+  height: 270px;
+}
+
+.card img {
+  height: 50px;
+  width: 50px;
+}
+
 *,
 *::after,
 *::before {
@@ -143,6 +229,12 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+}
+
+html a:link, html a:visited {
+  text-decoration: none;
+  border: none;
+  color: white;
 }
 
 @media only screen and (max-width: 75em) {
@@ -173,41 +265,94 @@ body {
   }
 }
 
+.black {
+  color: black !important;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #5e72e4;
+  color: white;
+  height: 80px;
+  letter-spacing: 1px;
+  -webkit-box-shadow: 0px 14px 32px -22px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 14px 32px -22px rgba(0, 0, 0, 0.75);
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  list-style: none;
+  padding-right: 100px;
+}
+
+nav i {
+  font-size: 24px;
+  margin-top: 25px;
+  margin-left: 50px;
+}
+
+nav a {
+  padding-right: 55px;
+  font-size: 17px;
+  margin: auto;
+}
+
+nav p {
+  font-family: 'Righteous', cursive;
+  font-size: 24px;
+}
+
 header {
-  height: 98.2vh;
-  background-image: url("../img/index_bg.svg");
-  background-size: cover;
+  height: 96vh;
+  background-image: url("../img/presentation_bg.png");
+  background-size: contain;
   background-position: top;
   background-repeat: no-repeat;
+  background-position-x: right;
 }
 
 header p {
-  font-family: 'Kalam', cursive;
-  font-weight: 100;
-  font-size: 120px;
-  text-align: center;
-  padding-top: 17%;
-  color: #233dd2;
-}
-
-header p span {
-  color: red;
+  font-family: 'Righteous', cursive;
+  font-weight: 400;
+  font-size: 100px;
+  letter-spacing: 2px;
+  text-align: start;
+  padding-top: 14%;
+  padding-left: 20px;
+  color: #5e72e4;
 }
 
 header p span img {
-  height: 130px;
+  height: 55px;
 }
 
 header h1 {
+  font-family: 'Righteous', cursive;
   font-weight: 300;
-  font-size: 24px;
-  text-align: center;
+  font-size: 28px;
+  text-align: start;
   letter-spacing: 0.8px;
   color: #525f7f;
+  padding-left: 20px;
 }
 
 header div {
-  text-align: center;
+  text-align: start;
 }
 
 header i {
@@ -245,45 +390,25 @@ section {
 }
 
 .tab--sections {
-  height: 100vh;
-  background-image: url("../img/p2.svg");
+  height: auto;
+  background-color: transparent;
   border-radius: 0px 0px 50px 50px;
   background-size: fill;
   background-position: top;
   background-repeat: no-repeat;
   background-position-x: right;
-  padding-left: 50px;
+  padding-bottom: 50px;
 }
 
 .tab--sections p {
   font-size: 60px;
-  padding-bottom: 30px;
   color: #383838;
+  text-align: center;
 }
 
 .tab--sections i {
   font-size: 55px;
   color: white;
-}
-
-.tab--sections button {
-  border: none;
-  border-radius: 80px;
-  outline: none;
-  cursor: pointer;
-  margin-bottom: 30px;
-  margin-right: 25px;
-  margin-left: 20px;
-  -webkit-box-shadow: 0px 8px 25px -14px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 8px 25px -14px rgba(0, 0, 0, 0.75);
-  background-color: #5e72e4;
-  color: white;
-  font-family: inherit;
-  font-size: 20px;
-  font-weight: 700;
-  letter-spacing: 1px;
-  width: 130px;
-  height: 65px;
 }
 
 .tab--sections a:link, .tab--sections a:visited {
@@ -296,22 +421,22 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-top: 11%;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-top: 0.5%;
+  margin-bottom: 1%;
 }
 
-.tab--sections .dark {
-  background-color: #172b4d;
+.tab--sections .orange {
+  background-color: #fb6340;
 }
 
-.tab--sections .red {
-  background-color: #3d55df;
-}
-
-.tab--sections .green {
-  background-color: #11cdef;
+.tab--sections .orange:hover {
+  background-color: #fa441b;
 }
 /*# sourceMappingURL=style.css.map */
