--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import './animation';
+@import './component';
 
-@import url('https://fonts.googleapis.com/css?family=Kalam:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
 *,
 *::after,
 *::before
@@ -14,6 +15,12 @@ html
 {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    a:link,a:visited
+        {
+                text-decoration: none;
+                border: none;
+                color:white;
+        }
 }
 @media only screen and (max-width: 75em) 
 {
@@ -48,51 +55,97 @@ body
     } 
 }
 
+.black
+{
+    color: black !important;
+}
 
+nav
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    // padding-top:10px;
+    // padding-bottom: 10px;
+    background-color: #5e72e4;
+    color: white;
+    height: 80px;
+    letter-spacing: 1px;
+    box-shadow: 0px 14px 32px -22px rgba(0,0,0,0.75);
+    ul{
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        padding-right: 100px;
+
+    }
+
+    i
+    {
+        font-size: 24px;
+        margin-top: 25px;
+        margin-left: 50px;
+    }
+    a{
+         padding-right: 55px;
+        font-size: 17px;
+        margin:auto;
+    }
+    p
+    {
+        font-family: 'Righteous', cursive;
+
+        font-size: 24px;
+    }
+    
+}
 
 
 header
 {
-    height: 98.2vh;
-    background-image: url('../img/index_bg.svg');
-    background-size: cover;
+    height: 96vh;
+    background-image: url('../img/presentation_bg.png');
+    background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
-
+    background-position-x: right; 
     p
     {
-        font-family: 'Kalam', cursive;
-        font-weight: 100;
-        font-size: 120px;
-        text-align: center;
-        padding-top: 17%;
-        color:#233dd2;
+        font-family: 'Righteous', cursive;
+        font-weight: 400;
+        font-size: 100px;
+        letter-spacing: 2px;
+        text-align: start;
+        padding-top: 14%;
+        padding-left: 20px;
+        color:#5e72e4;
     
         
         span
         {
-            color: red;
             img
             {
-                height: 130px;
+                height: 55px;
             }
         }
     }
     
     h1
     {
+        font-family: 'Righteous', cursive;
         font-weight: 300;
-        font-size: 24px;
-        text-align: center;
+        font-size: 28px;
+        text-align: start;
         letter-spacing: 0.8px;
         color: #525f7f;
+        padding-left: 20px;
 
         
     }
 
     div
     {
-        text-align: center;
+        text-align:start;
     }
 
     i
@@ -136,52 +189,34 @@ section
         font-family: inherit;
 }
 
+
+
+
 .tab--sections
 {
-        height: 100vh;
-        background-image: url('../img/p2.svg');
+        height: auto;
+        background-color: transparent;
+        // background-image: url('../img/p2.svg');
         border-radius: 0px 0px 50px 50px;
         background-size: fill;
         background-position: top;
         background-repeat: no-repeat;
         background-position-x: right; 
-        padding-left: 50px;
+        padding-bottom: 50px;
+        // padding: 50px;
         p
         {
                 font-size: 60px;
-                padding-bottom:30px;
+                // padding-bottom:30px;
                 color: #383838;
+                text-align: center;
         }
         i
         {
                 font-size: 55px;
                 color:white;
         }
-        button
-        {
-                border: none;
-                border-radius: 80px;
-                outline: none;
-                cursor: pointer;
-                // padding:20px;
-                margin-bottom: 30px;
-                margin-right: 25px;
-                margin-left: 20px;
-                box-shadow: 0px 8px 25px -14px rgba(0,0,0,0.75);
-                background-color: #5e72e4;
-                color: white;
-                font-family: inherit;
-                font-size: 20px;
-                font-weight: 700;
-                letter-spacing: 1px;
-                width: 130px;
-                height: 65px;
-                
-                // &:hover
-                // {
-                //         background-color: #3d55df;
-                // }
-        }
+        
         a:link,a:visited
         {
                 text-decoration: none;
@@ -192,24 +227,22 @@ section
         .cate
         {
              display: flex;
-             flex-direction: column; 
-             margin-top: 11%;
+             flex-direction: row; 
+             justify-content: space-evenly;
+             margin-top: 0.5%;
+             margin-bottom: 1%;
         }
 
-        .dark
+        .orange
         {
-                background-color: #172b4d;
+                background-color: #fb6340;
+                &:hover
+                {
+                    background-color:#fa441b;
+                }
         }
 
-        .red
-        {
-                background-color: #3d55df;
-        }
-
-        .green
-        {
-                background-color: #11cdef;
-        }
+        
         
 }
 
