--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 @import './animation';
 @import './component';
 
-@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&display=swap');
 *,
 *::after,
 *::before
@@ -60,88 +60,85 @@ body
     color: black !important;
 }
 
-nav
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    // padding-top:10px;
-    // padding-bottom: 10px;
-    background-color: #5e72e4;
-    color: white;
-    height: 80px;
-    letter-spacing: 1px;
-    box-shadow: 0px 14px 32px -22px rgba(0,0,0,0.75);
-    ul{
-        display: flex;
-        flex-direction: row;
-        list-style: none;
-        padding-right: 100px;
-
-    }
-
-    i
-    {
-        font-size: 24px;
-        margin-top: 25px;
-        margin-left: 50px;
-    }
-    a{
-         padding-right: 55px;
-        font-size: 17px;
-        margin:auto;
-    }
-    p
-    {
-        font-family: 'Righteous', cursive;
-
-        font-size: 24px;
-    }
-    
-}
-
-
 header
 {
-    height: 96vh;
-    background-image: url('../img/presentation_bg.png');
-    background-size: contain;
+    height: 100vh;
+    background-image: url('../img/banner_2.png');
+    background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
-    background-position-x: right; 
-    p
-    {
-        font-family: 'Righteous', cursive;
-        font-weight: 400;
-        font-size: 100px;
-        letter-spacing: 2px;
-        text-align: start;
-        padding-top: 14%;
-        padding-left: 20px;
-        color:#5e72e4;
+    font-family: 'Montserrat', sans-serif;
+    // background-position-x: right;
     
+    .links
+    {
+        // border: 2px solid red;
+        // font-size: 16px;
+        font-family: inherit;
+        font-weight: 300;
+        margin-left: 900px;
+        margin-right: 28px;
+        padding-top: 20px;
+        text-align: right;
+
+        a
+        {
+            padding-left: 100px;
+        }
+    }
+    
+    div
+    {
+        padding-top: 17%;
+        padding-left: 105px;
         
+
+        p
+        {
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 700;
+            font-size:95px;
+            color: white;
+            margin-top: -30px;
+    
+        }
+    }
+
+    .my--name
+    {
+        color: white;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 15px;
+        letter-spacing: 5.5px;
+        transform: rotate(-90deg);
+        float: left;
+        margin-left: -130px;
+        margin-top: -50px;
+
         span
         {
-            img
-            {
-                height: 55px;
-            }
+            font-size: 22px;
+            font-weight: 600;
+            letter-spacing: 2.5px;
         }
+
+    }
+    
+
+    .blood
+    {
+        margin-top: -60px;
     }
     
     h1
     {
-        font-family: 'Righteous', cursive;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 20px;
         font-weight: 300;
-        font-size: 28px;
-        text-align: start;
-        letter-spacing: 0.8px;
-        color: #525f7f;
-        padding-left: 20px;
-
+        color: white;
         
     }
+
 
     div
     {
@@ -185,8 +182,10 @@ header
 section
 {
         height: 100vh;
-        background-color:#f8f8f8;
+        background-color:#171941;
         font-family: inherit;
+        background-image: url('../img/dots.png');
+        background-size: contain;
 }
 
 
@@ -195,20 +194,12 @@ section
 .tab--sections
 {
         height: auto;
-        background-color: transparent;
-        // background-image: url('../img/p2.svg');
-        border-radius: 0px 0px 50px 50px;
-        background-size: fill;
-        background-position: top;
-        background-repeat: no-repeat;
-        background-position-x: right; 
+        background-color: #171941;
         padding-bottom: 50px;
-        // padding: 50px;
         p
         {
                 font-size: 60px;
-                // padding-bottom:30px;
-                color: #383838;
+                color: white;
                 text-align: center;
         }
         i
