--- a/styles/style.scss
+++ b/styles/style.scss
@@ -63,61 +63,55 @@ body
 header
 {
     height: 100vh;
-    background-image: url('../img/banner_2.png');
+    background-image: url('../img/banner_4.png');
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
     font-family: 'Montserrat', sans-serif;
-    // background-position-x: right;
+    color: black;
     
     .links
     {
-        // border: 2px solid red;
-        // font-size: 16px;
         font-family: inherit;
-        font-weight: 300;
+        font-weight: 400;
         margin-left: 900px;
-        margin-right: 28px;
+        margin-right: 50px;
         padding-top: 20px;
         text-align: right;
 
         a
         {
-            padding-left: 100px;
+            padding-left: 70px;
         }
     }
     
     div
     {
-        padding-top: 17%;
-        padding-left: 105px;
-        
-
+        // border: 2px solid green;
+        width: 850px;
+        margin-top: 16%;
+        margin-left: 35%;
         p
         {
-            font-family: 'Montserrat', sans-serif;
+            font-size: 110px;
             font-weight: 700;
-            font-size:95px;
-            color: white;
             margin-top: -30px;
-    
         }
     }
 
     .my--name
     {
-        color: white;
         font-family: 'Montserrat', sans-serif;
-        font-size: 15px;
+        font-size: 18px;
         letter-spacing: 5.5px;
         transform: rotate(-90deg);
         float: left;
-        margin-left: -130px;
-        margin-top: -50px;
+        margin-left: -125px;
+        
 
         span
         {
-            font-size: 22px;
+            font-size: 25px;
             font-weight: 600;
             letter-spacing: 2.5px;
         }
@@ -127,65 +121,31 @@ header
 
     .blood
     {
-        margin-top: -60px;
+       margin-top: -72px;
     }
     
     h1
     {
         font-family: 'Montserrat', sans-serif;
         font-size: 20px;
-        font-weight: 300;
-        color: white;
+        font-weight: 600;
+        color: rgba(0, 0, 0,0.45);
+
         
     }
 
-
-    div
-    {
-        text-align:start;
-    }
-
-    i
-    {
-        font-size: 120px;
-        margin:10px 25px;
-        cursor: pointer;
-    }
-
-    .html
-    {
-        color: #fb6340;
-    }
-
-    .css
-    {
-        color: #5e72e4;
-    }
-
-    .js
-    {
-        color: #f5365c;
-    }
-
-    .tracking-in-expand {
-        -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-                animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-    }
-
-    .bounce-in-top {
-        -webkit-animation: bounce-in-top 1.1s both;
-                animation: bounce-in-top 1.1s both;
-    }
     
 }
 
 section
 {
         height: 100vh;
-        background-color:#171941;
         font-family: inherit;
-        background-image: url('../img/dots.png');
-        background-size: contain;
+        background-color: white;
+        // background-image: url('../img/section.png');
+        // background-size: cover;
+        // background-position: top;
+        // background-repeat: no-repeat;
 }
 
 
@@ -194,12 +154,14 @@ section
 .tab--sections
 {
         height: auto;
-        background-color: #171941;
+        background-image: url('../img/tab_sec.png');
+        background-size: cover;
+        background-position: top;
+        background-repeat: no-repeat;
         padding-bottom: 50px;
         p
         {
                 font-size: 60px;
-                color: white;
                 text-align: center;
         }
         i
