--- a/styles/style.scss
+++ b/styles/style.scss
@@ -139,9 +139,10 @@ header
 
 section
 {
-        height: 100vh;
+        height: auto;
         font-family: inherit;
         background-color: white;
+        margin-bottom: 40px;
         // background-image: url('../img/section.png');
         // background-size: cover;
         // background-position: top;
